# zpad

./: README.md
lab1/: .gitignore  README.md  part1_vhi.ipynb  part2_analysis.ipynb
lab2/: README.md  part2_analysis.ipynb  requirements.txt
lab3/: README.md  requirements.txt
lab3/.ipynb_checkpoints/: lab3-checkpoint.ipynb
lab4/: README.md  lab4.py
lab5/: .gitignore  README.md  app.py
lab6/: CMakeLists.txt  README.md  preinstall.sh  run.sh
lab6/include/: Display.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab6/src/: FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab7/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab7/include/: CameraProvider.hpp  FaceDetector.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab7/src/: CameraProvider.cpp  Display.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
